<resources>
    <string name="app_name">SoftSquared Android Kotlin Template</string>

    <!-- Naming Rules -->
    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->

    <!-- Common -->

    <!-- Main -->
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_town_life_title">동네생활</string>
    <string name="main_btm_nav_location_title">내 근처</string>
    <string name="main_btm_nav_chatting_title">채팅</string>
    <string name="main_btm_nav_my_page_title">나의 당근</string>

    <!-- Home -->
    <string name="home_btn_try_get_http_method">GET API 보내기</string>
    <string name="home_btn_try_post_http_method">POST API 보내기</string>
    <string name="home_et_id">아이디를 입력하세요.</string>
    <string name="home_et_pw">비밀번호를 입력하세요.</string>

    <!-- MyPage -->
    <string name="my_page_tv_counter">%1d 번 눌렀습니다.</string>
    <string name="my_page_btn_counting_number">숫자 세기</string>

</resources>