<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:icon="@drawable/icon_btm_nav_home"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_home_title" />

    <item
        android:id="@+id/menu_main_btm_nav_town_life"
        android:icon="@drawable/icon_btm_nav_town_life"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_town_life_title" />

    <item
        android:id="@+id/menu_main_btm_nav_location"
        android:icon="@drawable/icon_btm_nav_location"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_location_title" />

    <item
        android:id="@+id/menu_main_btm_nav_chatting"
        android:icon="@drawable/icon_btm_nav_chatting"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_chatting_title" />
    <item
        android:id="@+id/menu_main_btm_nav_my_page"
        android:icon="@drawable/icon_btm_nav_my_page"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_my_page_title" />

</menu>
